--- a/pages/cat.TravelPerks/tp-deal-gen/index.html
+++ b/pages/cat.TravelPerks/tp-deal-gen/index.html
@@ -243,7 +243,7 @@ If a deal says "exclusive", you must ALWAYS BEGIN THE DEAL TITLE WITH "EXCLUSIVE
   );
 
   // NEW: model picker state
-  const [model,setModel] = useState("gemini-2.5-flash");
+  const [model,setModel] = useState("grok-4-fast-non-reasoning");
 
   useEffect(()=>{ if(toast){const t=setTimeout(()=>setToast(""),1600);return()=>clearTimeout(t)} },[toast]);
 
@@ -401,9 +401,8 @@ If a deal says "exclusive", you must ALWAYS BEGIN THE DEAL TITLE WITH "EXCLUSIVE
 
           {/* Model picker */}
           <select className="model-pick" value={model} onChange={e=>setModel(e.target.value)} title="AI model">
-            <option value="gemini-2.5-flash">2.5 Flash (thinks more)</option>
-            <option value="gemini-2.0-flash">2.0 Flash (fast)</option>
-            <option value="gemini-2.5-flash-lite">2.5 Flash-Lite (cheapest)</option>
+            <option value="grok-4-fast-non-reasoning">Fast (quick responses)</option>
+            <option value="grok-4-fast-reasoning">Reasoning (thinks more)</option>
           </select>
 
           {activeVendor && (
